# Financial-Drift-Detection-Engine

./: .env.example  .gitignore  Dockerfile  README.md  TESTING_STRATEGY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/core/: drift_engine.py  feature_engineering.py  normalization.py  transcript_parser.py
backend/app/models/: schemas.py
backend/app/routers/: drift.py  financials.py  narrative.py
backend/app/services/: drift_service.py  financial_service.py  ingestion_service.py  narrative_service.py
backend/app/tests/: test_api.py
frontend/: Dockerfile
frontend/src/api/: client.ts  types.ts
frontend/src/components/: FinancialChart.tsx  NarrativeChart.tsx
frontend/src/pages/: Dashboard.tsx
src/: config.py  drift.py  features.py  ingestion.py  narrative.py  normalization.py  pipeline.py  reporting.py  visualization.py
tests/: test_drift.py  test_features.py  test_ingestion.py  test_narrative.py  test_normalization.py  test_pipeline.py
